--- a/src/Frontend/src/app/Feature/Seller/dashboard/dashboard.html
+++ b/src/Frontend/src/app/Feature/Seller/dashboard/dashboard.html
@@ -303,7 +303,7 @@
                       </svg>
                       Ship Order
                     </button>
-                    <button class="btn-cancel"
+                    <!-- <button class="btn-cancel"
                       (click)="denyOrder({orderId:order.orderId,productId:order.productId,orderProductStatus:order.orderProductStatus})">
                       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                         stroke-width="2">
@@ -311,7 +311,7 @@
                         <line x1="6" y1="6" x2="18" y2="18"></line>
                       </svg>
                       Deny Order
-                    </button>
+                    </button> -->
                   </div>
                   <span *ngIf="order.orderProductStatus !== 0" class="no-actions">No Actions Required</span>
                 </div>
