--- a/src/Frontend/src/app/Feature/chat/chat/chat.html
+++ b/src/Frontend/src/app/Feature/chat/chat/chat.html
@@ -3,35 +3,19 @@
   <div class="spinner-border text-primary" role="status"></div>
   <p class="mt-3">Loading profile...</p>
 </div>
-<div
-  class="container-fluid px-3 py-0 chat-container"
-  style="height: 100vh"
-  *ngIf="loaded"
->
-  <button
-    class="btn btn-primary d-md-none m-2"
-    (click)="toggleContactsSidebar()"
-    [class.d-none]="isSidebarVisible || emptyChat"
-  >
+<div class="container-fluid px-3 py-0 chat-container" style="height: 100vh" *ngIf="loaded">
+  <button class="btn btn-primary d-md-none m-2" (click)="toggleContactsSidebar()"
+    [class.d-none]="isSidebarVisible || emptyChat">
     <i class="bi bi-toggle-off"></i>
     Contacts
   </button>
   <div class="row h-100 border rounded shadow-sm">
     <!-- Left Sidebar: Chat Contacts -->
-    <div
-      class="col-md-3 border-end overflow-auto contacts-bar"
-      style="height: 100%"
-      [ngClass]="{ 'd-none': emptyChat }"
-      [class.active]="isSidebarVisible"
-    >
-      <h5
-        class="text-uppercase fw-bold p-3 border-bottom d-flex justify-content-between align-items-center"
-      >
+    <div class="col-md-3 border-end overflow-auto contacts-bar" style="height: 100%" [ngClass]="{ 'd-none': emptyChat }"
+      [class.active]="isSidebarVisible">
+      <h5 class="text-uppercase fw-bold p-3 border-bottom d-flex justify-content-between align-items-center">
         Messages
-        <button
-          class="btn btn-primary d-md-none m-2"
-          (click)="toggleContactsSidebar()"
-        >
+        <button class="btn btn-primary d-md-none m-2" (click)="toggleContactsSidebar()">
           <i class="bi bi-toggle-on"></i>
 
           Close
@@ -39,32 +23,20 @@
       </h5>
 
       <div class="list-group list-group-flush">
-        <div
-          class="list-group-item d-flex align-items-start cursor-pointer"
-          (click)="activateContact(contact)"
-          *ngFor="let contact of contacts"
-          [ngClass]="{
+        <div class="list-group-item d-flex align-items-start cursor-pointer" (click)="activateContact(contact)"
+          *ngFor="let contact of contacts" [ngClass]="{
             active: activeContact?.userId === contact.userId,
             unread: unreadSenders.has(contact.userId)
-          }"
-        >
+          }">
           <div class="position-relative d-inline-block me-2">
-            <img
-              [src]="
+            <img [src]="
                 getFullImageUrl(
                   contact.imageURL ||
                     'assets/img/person/bb44c151-ae0d-4067-a271-148e2ad415ec.png'
                 )
-              "
-              class="rounded-circle me-2"
-              width="40"
-              height="40"
-            />
-            <span
-              class="position-absolute top-0 end-0 translate-middle border border-white rounded-circle"
-              [ngClass]="contact.isOnline ? 'bg-success' : 'bg-secondary'"
-              style="width: 12px; height: 12px"
-            ></span>
+              " class="rounded-circle me-2" width="40" height="40" />
+            <span class="position-absolute top-0 end-0 translate-middle border border-white rounded-circle"
+              [ngClass]="contact.isOnline ? 'bg-success' : 'bg-secondary'" style="width: 12px; height: 12px"></span>
           </div>
           <div>
             <div class="fw-semibold">
@@ -77,29 +49,16 @@
     </div>
 
     <!-- Middle Content: Chat Window -->
-    <div
-      class="col-md-6 d-flex flex-column p-0"
-      style="height: 100%"
-      [ngClass]="{ 'col-md-12': emptyChat }"
-    >
-      <div
-        class="border-bottom p-3 bg-light"
-        [ngClass]="{ 'd-none': emptyChat }"
-      >
+    <div class="col-md-6 d-flex flex-column p-0" style="height: 100%" [ngClass]="{ 'col-md-12': emptyChat }">
+      <div class="border-bottom p-3 bg-light" [ngClass]="{ 'd-none': emptyChat }">
         <h5 class="mb-0">{{ activeContact?.receiverName }}</h5>
       </div>
 
       <!-- Message History -->
-      <div
-        class="flex-grow-1 overflow-auto p-3"
-        style="background-color: #f9f9f9"
-        #messagesContainer
-      >
+      <div class="flex-grow-1 overflow-auto p-3" style="background-color: #f9f9f9" #messagesContainer>
         <!-- If emptyChat is true -->
-        <div
-          *ngIf="emptyChat"
-          class="d-flex flex-column justify-content-center align-items-center text-center w-100 p-5"
-        >
+        <div *ngIf="emptyChat"
+          class="d-flex flex-column justify-content-center align-items-center text-center w-100 p-5">
           <i class="bi bi-shield-exclamation fs-1"></i>
 
           <h4 class="mt-3">No conversations yet</h4>
@@ -115,8 +74,7 @@
           <div class="d-flex align-items-start mb-md-3 msg-block p-1">
             <!-- Avatar -->
             <div class="position-relative d-inline-block me-2">
-              <img
-                [src]="
+              <img [src]="
                   msg.receiverId === receiverId
                     ? getFullImageUrl(
                         profileData?.imgUrl ||
@@ -126,34 +84,24 @@
                         activeContact?.imageURL ||
                           'assets/img/person/bb44c151-ae0d-4067-a271-148e2ad415ec.png'
                       )
-                "
-                class="rounded-circle me-2"
-                width="40"
-                height="40"
-              />
-              <span
-                class="position-absolute top-0 end-0 translate-middle border border-white rounded-circle"
-                [ngClass]="
+                " class="rounded-circle me-2" width="40" height="40" />
+              <span class="position-absolute top-0 end-0 translate-middle border border-white rounded-circle" [ngClass]="
                   msg.receiverId === receiverId
                     ? 'bg-success'
                     : activeContact?.isOnline
                     ? 'bg-success'
                     : 'bg-secondary'
-                "
-                style="width: 12px; height: 12px"
-              ></span>
+                " style="width: 12px; height: 12px"></span>
             </div>
 
             <!-- Message Body -->
             <div class="p-2 rounded" style="max-width: 75%">
-              <div
-                class="d-flex justify-content-between align-items-center mb-1"
-              >
+              <div class="d-flex justify-content-between align-items-center mb-1">
                 <div class="fw-semibold">
                   {{
-                    msg.receiverId === receiverId
-                      ? "You"
-                      : activeContact?.receiverName
+                  msg.receiverId === receiverId
+                  ? "You"
+                  : activeContact?.receiverName
                   }}
                 </div>
                 <div class="small text-muted ms-2">
@@ -163,39 +111,25 @@
 
               <!-- Message content -->
               <div class="text-break">
-                <ng-container
-                  *ngIf="!msg.attachmentUrl; else attachmentTemplate"
-                >
+                <ng-container *ngIf="!msg.attachmentUrl; else attachmentTemplate">
                   {{ msg.message }}
                 </ng-container>
                 <ng-template #attachmentTemplate>
                   <ng-container *ngIf="msg.attachmentUrl">
                     <!-- PDF -->
-                    <a
-                      *ngIf="isPdf(msg.attachmentUrl)"
-                      [href]="extractAttachmentPath(msg.attachmentUrl)"
-                      target="_blank"
-                      rel="noopener"
-                      class="btn btn-sm btn-outline-primary mt-2 d-inline-block"
-                    >
+                    <a *ngIf="isPdf(msg.attachmentUrl)" [href]="extractAttachmentPath(msg.attachmentUrl)"
+                      target="_blank" rel="noopener" class="btn btn-sm btn-outline-primary mt-2 d-inline-block">
                       📄 View PDF
                     </a>
 
                     <!-- Image -->
-                    <img
-                      *ngIf="isImage(msg.attachmentUrl)"
-                      [src]="extractAttachmentPath(msg.attachmentUrl)"
-                      alt="Attachment"
-                      class="rounded shadow"
-                      style="max-width: 200px"
-                    />
+                    <img *ngIf="isImage(msg.attachmentUrl)" [src]="extractAttachmentPath(msg.attachmentUrl)"
+                      alt="Attachment" class="rounded shadow" style="max-width: 200px" />
 
                     <!-- Fallback (optional) -->
-                    <div
-                      *ngIf="
+                    <div *ngIf="
                         !isImage(msg.attachmentUrl) && !isPdf(msg.attachmentUrl)
-                      "
-                    >
+                      ">
                       <small class="text-muted">Unsupported file type</small>
                     </div>
                   </ng-container>
@@ -208,26 +142,19 @@
         <!-- New real-time messages -->
         <ng-container *ngFor="let msg of messages">
           <div class="d-flex align-items-start mb-md-3 msg-block p-1">
-            <img
-              [src]="
+            <img [src]="
                 msg.receiverId === receiverId
                   ? getFullImageUrl(profileData?.imgUrl || '')
                   : getFullImageUrl(activeContact?.imageURL || '')
-              "
-              class="rounded-circle me-2"
-              style="width: 40px; height: 40px; object-fit: cover"
-              alt="avatar"
-            />
+              " class="rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover" alt="avatar" />
 
             <div class="p-2 rounded" style="max-width: 75%">
-              <div
-                class="d-flex justify-content-between align-items-center mb-1"
-              >
+              <div class="d-flex justify-content-between align-items-center mb-1">
                 <div class="fw-semibold">
                   {{
-                    msg.receiverId === receiverId
-                      ? "You"
-                      : activeContact?.receiverName
+                  msg.receiverId === receiverId
+                  ? "You"
+                  : activeContact?.receiverName
                   }}
                 </div>
                 <div class="small text-muted ms-2">
@@ -236,39 +163,25 @@
               </div>
 
               <div class="text-break">
-                <ng-container
-                  *ngIf="!msg.attachmentUrl; else attachmentTemplate2"
-                >
+                <ng-container *ngIf="!msg.attachmentUrl; else attachmentTemplate2">
                   {{ msg.message }}
                 </ng-container>
                 <ng-template #attachmentTemplate2>
                   <ng-container *ngIf="msg.attachmentUrl">
                     <!-- PDF -->
-                    <a
-                      *ngIf="isPdf(msg.attachmentUrl)"
-                      [href]="extractAttachmentPath(msg.attachmentUrl)"
-                      target="_blank"
-                      rel="noopener"
-                      class="btn btn-sm btn-outline-primary mt-2 d-inline-block"
-                    >
+                    <a *ngIf="isPdf(msg.attachmentUrl)" [href]="extractAttachmentPath(msg.attachmentUrl)"
+                      target="_blank" rel="noopener" class="btn btn-sm btn-outline-primary mt-2 d-inline-block">
                       📄 View PDF
                     </a>
 
                     <!-- Image -->
-                    <img
-                      *ngIf="isImage(msg.attachmentUrl)"
-                      [src]="extractAttachmentPath(msg.attachmentUrl)"
-                      alt="Attachment"
-                      class="rounded shadow"
-                      style="max-width: 200px"
-                    />
+                    <img *ngIf="isImage(msg.attachmentUrl)" [src]="extractAttachmentPath(msg.attachmentUrl)"
+                      alt="Attachment" class="rounded shadow" style="max-width: 200px" />
 
                     <!-- Fallback (optional) -->
-                    <div
-                      *ngIf="
+                    <div *ngIf="
                         !isImage(msg.attachmentUrl) && !isPdf(msg.attachmentUrl)
-                      "
-                    >
+                      ">
                       <small class="text-muted">Unsupported file type</small>
                     </div>
                   </ng-container>
@@ -280,10 +193,7 @@
       </div>
 
       <!-- Input Area -->
-      <div
-        class="p-3 border-top bg-white position-relative"
-        [ngClass]="{ 'd-none': emptyChat }"
-      >
+      <div class="p-3 border-top bg-white position-relative" [ngClass]="{ 'd-none': emptyChat }">
         <!-- <div class="mb-2">
           <input
             [(ngModel)]="receiverId"
@@ -292,36 +202,18 @@
           />
         </div> -->
         <div class="input-group">
-          <input
-            [(ngModel)]="message"
-            class="form-control"
-            placeholder="Type a message..."
-            (keydown.enter)="sendMessage()"
-          />
-          <input
-            type="file"
-            #fileInput
-            (change)="onFileSelected($event)"
-            hidden
-          />
+          <input [(ngModel)]="message" class="form-control" placeholder="Type a message..."
+            (keydown.enter)="sendMessage()" />
+          <input type="file" #fileInput (change)="onFileSelected($event)" hidden />
           <button (click)="fileInput.click()" class="btn btn-outline-secondary">
             📎
           </button>
-          <button
-            class="btn btn-outline-secondary"
-            (click)="showEmojiPicker = !showEmojiPicker"
-          >
+          <button class="btn btn-outline-secondary" (click)="showEmojiPicker = !showEmojiPicker">
             😎
           </button>
           <div *ngIf="showEmojiPicker" class="emoji-picker-container">
-            <emoji-mart
-              (emojiSelect)="addEmoji($event)"
-              [darkMode]="false"
-              [ariaExpanded]="showEmojiPicker"
-              [enableFrequentEmojiSort]="false"
-              [totalFrequentLines]="4"
-              [style]="{ padding: '0%' }"
-            ></emoji-mart>
+            <emoji-mart (emojiSelect)="addEmoji($event)" [darkMode]="false" [ariaExpanded]="showEmojiPicker"
+              [enableFrequentEmojiSort]="false" [totalFrequentLines]="4" [style]="{ padding: '0%' }"></emoji-mart>
           </div>
           <button class="btn btn-primary" (click)="sendMessage()">Send</button>
         </div>
@@ -329,34 +221,21 @@
     </div>
 
     <!-- Right Sidebar: Customer Info -->
-    <div
-      class="col-md-3 border-start px-3 d-none d-md-block pt-5"
-      [ngClass]="{ 'd-none': emptyChat }"
-    >
+    <div class="col-md-3 border-start px-3 d-none d-md-block pt-5" [ngClass]="{ 'd-none': emptyChat }">
       <div *ngIf="!activeContact && !profileData" class="text-center p-5">
         <div class="spinner-border text-primary" role="status"></div>
         <p class="mt-3">Loading profile...</p>
       </div>
       <div class="text-center pt-3" *ngIf="activeContact">
-        <img
-          [src]="
+        <img [src]="
             getFullImageUrl(
               activeContact?.imageURL ||
                 'assets/img/person/bb44c151-ae0d-4067-a271-148e2ad415ec.png'
             )
-          "
-          class="rounded-circle mb-3"
-          width="55"
-          height="55"
-          style="display: block; margin: auto"
-          alt="User"
-        />
+          " class="rounded-circle mb-3" width="55" height="55" style="display: block; margin: auto" alt="User" />
         <h6 class="fw-bold">{{ activeContact?.receiverName }}</h6>
         <p class="text-muted mb-1">{{ activeContact?.receiverName }}</p>
-        <span
-          class="badge"
-          [ngClass]="activeContact?.isOnline ? 'bg-success' : 'bg-secondary'"
-        >
+        <span class="badge" [ngClass]="activeContact?.isOnline ? 'bg-success' : 'bg-secondary'">
           {{ activeContact?.isOnline ? "Online" : "Offline" }}
         </span>
       </div>
